# tinycar_runtime

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  nn_runtime.hpp
backends/nn/: nn_coreml.hpp
backends/nn/coreml_backend_swift/: CMakeLists.txt  coreml_backend.swift
backends/provider/: file_image_provider.hpp  file_video_provider.hpp
cmake/additional/: ContentDownload.cmake
cmake/swift/: InitializeSwift.cmake
nv/: Readme.md  helpers.hpp  nv.cpp  nv.hpp
nv/example/: CMakeLists.txt  Readme.md  main.cpp
src/: gamepad_mapping.hpp  logger.hpp  nn_runtime.hpp  provider.hpp  recorder.hpp
src/backends/nn/: nn_coreml.hpp
src/backends/nn/coreml_backend_swift/: coreml_backend.swift
src/backends/provider/: file_image_provider.hpp  file_video_provider.hpp  tinycar_provider.hpp
src/viewcontroller/: tinycar_viewcontroller.cpp  tinycar_viewcontroller.hpp
tinycar_lib/: tcfp.hpp  tinycar.cpp  tinycar.hpp
